--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,4 @@
 @import url(components/main.css);
 /* @import url(components/footer.css); */
 
-/* @import url(components/mq.css); */
+@import url(components/mq.css);
