--- a/css/basics/base.css
+++ b/css/basics/base.css
@@ -15,8 +15,11 @@ body {
  font-family: Tahoma,
   sans-serif;
  color: var(--primary-color);
- background-color: var(--bg-color);
+ background: var(--bg-color);
 }
+
+
+
 
 a {
  color: inherit;
@@ -33,9 +36,19 @@ button {
 
 .canvas-container {
  position: relative;
- width: 50vw;
+ width: 80vw;
 }
 
 input {
  display: block;
+}
+
+a,
+button:hover {
+ cursor: pointer;
+}
+
+img {
+ width: 300px;
+ height: 300px;
 }
