--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 @import url(basics/helpers.css);
 
 @import url(components/header.css);
-/* @import url(components/nav.css); */
+@import url(components/nav.css);
 @import url(components/main.css);
-/* @import url(components/footer.css); */
+@import url(components/footer.css);
 
 @import url(components/mq.css);
