--- a/css/components/main.css
+++ b/css/components/main.css
@@ -23,16 +23,37 @@
  gap: .625rem;
 }
 
+
+.button-container {
+ display: grid;
+ grid-template-columns: 1fr 1fr 1fr;
+ align-items: center;
+ justify-content: center;
+ place-items: center;
+}
+
 .button-container>* {
- flex: 1 0 21%;
- margin-block-end: 3.125rem;
- background-color: blue;
+ width: 100px;
 }
 
 .settings-container {
  border-radius: 10px;
- background: linear-gradient(to bottom, #8B4513, #CD853F);
- box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+ padding: 10px;
+ background: inherit;
+ /* background: linear-gradient(to bottom, #8B4513, #CD853F); */
+ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.bottom-button-container {
+ display: flex;
+ justify-content: space-around;
+ margin-block-start: 250px;
+ gap: .625rem;
+}
+
+.bottom-button-container>* {
+ min-width: 110px;
+ text-align: center;
 }
 
 .meme-input {
@@ -40,8 +61,7 @@
 }
 
 .delete-btn {
- width: 200px;
- height: 20px;
+
  font-size: 20px;
  color: red;
  font-weight: bolder;
@@ -51,4 +71,20 @@
 
 .button-container button {
  border: none;
+}
+
+.settings-container {
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+
+
+.button-container>* {
+ margin: 5px;
+}
+
+.button-container:last-child {
+ margin-top: 20px;
 }
