--- a/css/basics/base.css
+++ b/css/basics/base.css
@@ -55,3 +55,13 @@ img {
 .logo {
  font-family: 'Lightning', sans-serif;
 }
+
+.flash-symbol {
+ color: var(--rev-flash);
+ text-align: center;
+}
+
+h1 {
+ text-align: center;
+ color: var(--rev-flash);
+}
