--- a/css/components/main.css
+++ b/css/components/main.css
@@ -54,10 +54,12 @@ input[type="file"] {
 
 .button-container>*:hover {
  color: var(--flash);
+ transition: 0.6s ease-in;
 }
 
 .bottom-button-container>:hover {
  color: var(--flash);
+ transition: 0.6s ease-in;
 }
 
 #font-family-select:hover {
