--- a/css/components/mq.css
+++ b/css/components/mq.css
@@ -4,10 +4,14 @@
   width: 150px;
  }
 
+ .meme-generator-container {
+  column-gap: 0;
+ }
 
-
-
-
+ canvas {
+  width: 450px;
+  height: 650px;
+ }
 }
 
 
@@ -21,5 +25,114 @@
  }
 
 
+
+
+}
+
+@media (max-width:700px) {
+ .main-nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100%;
+  background-color: rgba(159, 46, 46, 0.9);
+  border-inline-start: 1px solid var(--rev-flash);
+  min-width: 200px;
+
+  transform: translateX(100%);
+
+  transition: transform 0.6s, box-shadow 0.6s;
+ }
+
+ body.menu-open .main-nav {
+  box-shadow: -6px 0px 20px rgb(0 0 0 / 25%);
+  transform: translateX(0);
+
+ }
+
+ .main-header .main-nav-list {
+  margin-inline-start: 0;
+ }
+
+ .main-nav .main-nav-list {
+  flex-direction: column;
+ }
+
+
+ .main-nav .main-nav-list a {
+  display: flex;
+  justify-content: center;
+  padding: 8px 10px;
+  border-block-end: 0;
+ }
+
+
+
+
+
+ #menyAvPaa {
+  display: none;
+ }
+
+ #menyAvPaa:checked~#meny {
+  transform: translateX(0rem);
+ }
+
+ #burger {
+  position: absolute;
+  cursor: pointer;
+  width: 2rem;
+  height: 2rem;
+  right: 1rem;
+  top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+ }
+
+ #burger>div {
+  height: 2px;
+  background-color: var(--rev-flash);
+  transition: 0.5s;
+  z-index: 999;
+ }
+
+ body.menu-open #burger {
+  position: fixed;
+  top: 5px;
+  right: 5px;
+ }
+
+
+
+ #menyAvPaa:checked~#burger>div {
+  background-color: var(--rev-flash);
+ }
+
+ #menyAvPaa:checked~#burger>div:nth-child(1) {
+  transform: translateY(15px) rotate(45deg);
+ }
+
+
+ #menyAvPaa:checked~#burger>div:nth-child(2) {
+  opacity: 0;
+ }
+
+ #menyAvPaa:checked~#burger>div:nth-child(3) {
+  transform: translateY(-15px) rotate(-45deg);
+ }
+
+ body.menu-open main,
+ body.menu-open footer,
+ body.menu-open .page-nav {
+  z-index: -1;
+ }
+
+ body:not(.menu-open) main,
+ body:not(.menu-open) footer,
+ body:not(.menu-open) .page-nav {
+  z-index: 0;
+  transition: z-index 1s;
+ }
 
 }
