--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,7 +1,7 @@
 .main-footer {
- position: absolute;
+ position: sticky;
  width: 100%;
- bottom: -175px;
+ bottom: 0px;
  place-items: center;
  margin-top: auto;
  row-gap: 2.375rem;
