--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,6 +1,7 @@
 .main-footer {
+ position: absolute;
+ bottom: 0;
  width: 100%;
- bottom: 0px;
  place-items: center;
  margin-top: auto;
  row-gap: 2.375rem;
