--- a/css/components/main.css
+++ b/css/components/main.css
@@ -113,7 +113,7 @@ input[type="file"] {
  background: inherit;
  /* background: linear-gradient(to bottom, #8B4513, #CD853F); */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
- /* margin-block-end: 195px; */
+ margin-block-end: 190px;
 }
 
 
@@ -127,4 +127,8 @@ input[type="file"] {
 
 .line-container {
  justify-self: start;
+}
+
+.gallery {
+ margin-block-end: 200px;
 }
